modified DTOs for request & response, added home page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 
     <style>
         body{
-            background-color: #7469B6 !important;
+            background-color: #76ABAE !important;
         }
         .login-area {
             display: flex;
