--- a/src/main/resources/templates/publichome.html
+++ b/src/main/resources/templates/publichome.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th=xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Document</title>
+
+    <style>
+        body,
+html {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar {
+  flex-shrink: 0;
+}
+
+.hero-section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #EEEEEE; /* Optional: Add a background color */
+    text-align: center; /* Center text horizontally */
+  }
+
+  .hero-section h1 {
+    font-size: 3rem;
+    font-style: italic;
+    color: #333; /* Optional: Customize text color */
+  }
+
+  .hero-section button {
+    margin-top: 20px; /* Space between h1 and button */
+    padding: 10px 20px;
+    font-size: 1rem;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .hero-section button:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+  }
+    </style>
 </head>
 <body>
-    <p>this is public home page</p>
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg" style="background-color: #76ABAE;">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- hero section -->
+<div class="hero-section">
+    <h1>Welcome to the Library</h1>
+    <button type="button" class="btn btn-primary btn-lg">Explore Books</button>
+</div>
 </body>
 </html>
